--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -317,7 +317,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/grey_mid"/>
             <TextView
-                android:id="@+id/totalIncomeSummTV"
+                android:id="@+id/totalIncomeTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -339,7 +339,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/grey_mid"/>
             <TextView
-                android:id="@+id/totalCapitalSummTV"
+                android:id="@+id/totalCapitalTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
