--- a/app/src/main/res/layout/item_summary.xml
+++ b/app/src/main/res/layout/item_summary.xml
@@ -162,7 +162,7 @@
                         android:gravity="center_horizontal|center_vertical"/>
 
                     <TextView
-                        android:id="@+id/capitalCostsTV"
+                        android:id="@+id/totalHandlingFeeTV"
                         android:layout_width="0dp"
                         android:layout_height="60dp"
                         android:text="@string/total_handling_fee"
