--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -273,7 +273,8 @@
                     android:layout_height="match_parent"
                     android:scrollbars="vertical"
                     android:fadeScrollbars="true"
-                    android:layout_marginBottom="165dp"/>
+                    android:layout_marginBottom="120dp"
+                    android:paddingBottom="120dp"/>
             </LinearLayout>
 
         </HorizontalScrollView>
