--- a/app/src/main/res/layout/activity_detail_recent.xml
+++ b/app/src/main/res/layout/activity_detail_recent.xml
@@ -613,6 +613,22 @@
                 android:layout_marginBottom="20dp">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/downloadBtn"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_round_1"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:clickable="true"
+                    android:text="@string/download_qr_code"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:focusable="true"
+                    android:visibility="gone"/>
+
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/addDataBtn"
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
