--- a/app/src/main/res/layout/item_recycler_detail.xml
+++ b/app/src/main/res/layout/item_recycler_detail.xml
@@ -101,7 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="@string/update_information"
+                            android:text="@string/product_condition_arrived"
                             android:textColor="@color/salem_1"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -144,16 +144,89 @@
                             android:textSize="14sp"
                             android:textStyle="bold" />
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
-                                android:id="@+id/incomingWeightTV"
+                                android:id="@+id/incomingWeightSecondaryTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="30sp"
                                 android:layout_marginBottom="15dp"
-                                android:hint="@string/weight_data"
+                                android:text="@string/weight_data"
+                                android:textColor="@color/black"
+                                android:textSize="17sp"
+                                android:textStyle="normal" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5sp"
+                                android:layout_marginBottom="5dp"
+                                android:text="@string/kilogram"
+                                android:textColor="@color/black"
+                                android:textSize="17sp"
+                                android:textStyle="normal" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical"
+                            android:padding="5dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="@string/update_product_information"
+                                android:textColor="@color/salem_1"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="@string/product_outgoing_date_sub_tittle"
+                            android:textColor="@color/grey_mid"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/outgoingDateSecondaryTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30sp"
+                            android:layout_marginBottom="15dp"
+                            android:hint="@string/your_data_in_here"
+                            android:textColor="@color/black"
+                            android:textSize="17sp"
+                            android:textStyle="normal" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="@string/outgoing_product_weight"
+                            android:textColor="@color/grey_mid"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/outgoingWeightSecondaryTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="30sp"
+                                android:layout_marginBottom="15dp"
+                                android:text="@string/weight_data"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
                                 android:textStyle="normal" />
@@ -193,12 +266,12 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
-                            android:text="@string/price_sub_tittle"
+                            android:text="@string/handling_sub_title"
                             android:textColor="@color/grey_mid"
                             android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
-                            android:id="@+id/priceSecondaryTV"
+                            android:id="@+id/handlingSecondaryTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="30sp"
@@ -213,36 +286,20 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
-                            android:text="@string/outgoing_product_weight"
+                            android:text="@string/handling_fee_sub_title"
                             android:textColor="@color/grey_mid"
                             android:textSize="14sp"
                             android:textStyle="bold" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/handlingFeeSecondaryTV"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/outgoingWeightTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="30sp"
-                                android:layout_marginBottom="15dp"
-                                android:hint="@string/weight_data"
-                                android:textColor="@color/black"
-                                android:textSize="17sp"
-                                android:textStyle="normal" />
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="5sp"
-                                android:layout_marginBottom="5dp"
-                                android:text="@string/kilogram"
-                                android:textColor="@color/black"
-                                android:textSize="17sp"
-                                android:textStyle="normal" />
-                        </LinearLayout>
-
+                            android:layout_marginStart="30sp"
+                            android:layout_marginBottom="15dp"
+                            android:hint="@string/your_data_in_here"
+                            android:textColor="@color/black"
+                            android:textSize="17sp"
+                            android:textStyle="normal" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -255,7 +312,7 @@
                             android:textStyle="bold" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
                             <TextView
@@ -264,7 +321,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="30sp"
                                 android:layout_marginBottom="15dp"
-                                android:hint="@string/weight_data"
+                                android:text="@string/weight_data"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
                                 android:textStyle="normal" />
@@ -279,18 +336,17 @@
                                 android:textStyle="normal" />
                         </LinearLayout>
 
-
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
-                            android:text="@string/product_outgoing_date_sub_tittle"
+                            android:text="@string/selling_price_sub_title"
                             android:textColor="@color/grey_mid"
                             android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
-                            android:id="@+id/outgoingDateTV"
+                            android:id="@+id/sellingPriceSecondaryTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="30sp"
@@ -300,6 +356,25 @@
                             android:textSize="17sp"
                             android:textStyle="normal" />
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="Distribution:"
+                            android:textColor="@color/grey_mid"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/distributionTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30sp"
+                            android:layout_marginBottom="15dp"
+                            android:hint="@string/your_data_in_here"
+                            android:textColor="@color/black"
+                            android:textSize="17sp"
+                            android:textStyle="normal" />
 
                         <View
                             android:layout_width="333dp"
